--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
 
 [dependencies]
-ark-std = { version = "0.3", default-features = false }
-ark-ff = { version = "0.3", default-features = false }
-ark-ec = { version = "0.3", default-features = false }
-ark-poly = { version = "0.3", default-features = false }
-ark-serialize = { version = "0.3", default-features = false, features = ["derive"] }
+ark-std = { git = "https://github.com/arkworks-rs/std", version = "0.3", default-features = false }
+ark-ff = { git = "https://github.com/arkworks-rs/algebra", version = "0.3", default-features = false }
+ark-ec = { git = "https://github.com/arkworks-rs/algebra", version = "0.3", default-features = false }
+ark-poly = { git = "https://github.com/arkworks-rs/algebra", version = "0.3", default-features = false }
+ark-serialize = { git = "https://github.com/arkworks-rs/algebra", version = "0.3", default-features = false, features = ["derive"] }
 rayon = { version = "1", optional = true }
 merlin = "3.0"
 
@@ -17,8 +17,20 @@ merlin = "3.0"
 criterion = "0.3"
 ark-bw6-761 = { version = "0.3", default-features = false }
 
+[[bench]]
+name = "primitives"
+harness = false
+
 [features]
 default = []
 std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std"]
 parallel = ["std", "ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "rayon"]
 print-trace = ["ark-std/print-trace"]
+
+[patch.crates-io]
+ark-std = { git = "https://github.com/arkworks-rs/std" }
+ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
+ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
+ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
+ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves" }
+ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves" }
