--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ merlin = "3.0"
 criterion = "0.3"
 ark-bw6-761 = { version = "0.3", default-features = false }
 
+[[bench]]
+name = "primitives"
+harness = false
+
 [features]
 default = []
 std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std"]
