--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ merlin = "3.0"
 [dev-dependencies]
 criterion = "0.3"
 ark-bw6-761 = { version = "0.3", default-features = false }
+ark-bls12-381 = { version = "0.3", default-features = false, features = ["curve"] }
 
 [[bench]]
 name = "primitives"
@@ -33,3 +34,4 @@ ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
 ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
 ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
 ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves" }
+ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }
