--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves", version = "0.3", 
 name = "primitives"
 harness = false
 
+[[bench]]
+name = "multiexps"
+harness = false
+
 [features]
 default = []
 std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std"]
