--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize
 parallel = ["std", "ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "rayon"]
 print-trace = ["ark-std/print-trace"]
 
+# until https://github.com/arkworks-rs/curves/pull/95 is merged
 [patch.crates-io]
 ark-std = { git = "https://github.com/arkworks-rs/std" }
 ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "d6365c3" }
