--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,10 @@ harness = false
 name = "multiexps"
 harness = false
 
+[[test]]
+name = "plonk"
+harness = true
+
 [features]
 default = []
 std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std"]
