--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
 
 [dependencies]
 ark-std = { git = "https://github.com/arkworks-rs/std", default-features = false }
-ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
-ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
-ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
-ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["derive"] }
+ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
+ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
+ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
+ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["derive"], rev = "402e7f9" }
 
 rayon = { version = "1", optional = true }
 merlin = "3.0"
@@ -39,7 +39,7 @@ print-trace = ["ark-std/print-trace"]
 
 [patch.crates-io]
 ark-std = { git = "https://github.com/arkworks-rs/std" }
-ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
-ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
-ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
-ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
+ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "402e7f9" }
+ark-ec = { git = "https://github.com/arkworks-rs/algebra", rev = "402e7f9" }
+ark-poly = { git = "https://github.com/arkworks-rs/algebra", rev = "402e7f9" }
+ark-serialize = { git = "https://github.com/arkworks-rs/algebra", rev = "402e7f9" }
