--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,19 @@ edition = "2021"
 authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
 
 [dependencies]
-ark-std = { git = "https://github.com/arkworks-rs/std", default-features = false }
-ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
-ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
-ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false, rev = "402e7f9" }
-ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["derive"], rev = "402e7f9" }
+ark-std = { version = "0.4.0-alpha", default-features = false }
+ark-ff = { version = "0.4.0-alpha", default-features = false }
+ark-ec = { version = "0.4.0-alpha", default-features = false }
+ark-poly = { version = "0.4.0-alpha", default-features = false }
+ark-serialize = { version = "0.4.0-alpha", default-features = false, features = ["derive"] }
 
 rayon = { version = "1", optional = true }
 merlin = "3.0"
 
 [dev-dependencies]
 criterion = "0.3"
-ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves", default-features = false }
-ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
+ark-bw6-761 = { version = "0.4.0-alpha.2", default-features = false }
+ark-bls12-381 = { version = "0.4.0-alpha.2", default-features = false, features = ["curve"] }
 
 [[bench]]
 name = "primitives"
@@ -36,10 +36,3 @@ default = []
 std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std"]
 parallel = ["std", "ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "rayon"]
 print-trace = ["ark-std/print-trace"]
-
-[patch.crates-io]
-ark-std = { git = "https://github.com/arkworks-rs/std" }
-ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "402e7f9" }
-ark-ec = { git = "https://github.com/arkworks-rs/algebra", rev = "402e7f9" }
-ark-poly = { git = "https://github.com/arkworks-rs/algebra", rev = "402e7f9" }
-ark-serialize = { git = "https://github.com/arkworks-rs/algebra", rev = "402e7f9" }
