--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ harness = true
 
 [features]
 default = []
+asm = ["ark-ff/asm"]
 std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std"]
 parallel = ["std", "rayon", "ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel"]
 print-trace = ["ark-std/print-trace"]
