--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,26 @@
 [package]
 name = "fflonk"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "Collection of tools for augmenting polynomial commitment schemes"
-keywords = ["crypto", "cryptography", "fflonk", "shplonk"]
+keywords = ["cryptography", "pcs", "kzg"]
 
 [dependencies]
-ark-std = { version = "0.4", default-features = false }
-ark-ff = { version = "0.4", default-features = false }
-ark-ec = { version = "0.4", default-features = false }
-ark-poly = { version = "0.4", default-features = false }
-ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
+ark-std = { version = "0.5", default-features = false }
+ark-ff = { version = "0.5", default-features = false }
+ark-ec = { version = "0.5", default-features = false }
+ark-poly = { version = "0.5", default-features = false }
+ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
 
-rayon = { version = "1", optional = true }
+rayon = { version = "1.0", optional = true }
 merlin = { version = "3.0", default-features = false }
 
 [dev-dependencies]
-criterion = "0.3"
-ark-bw6-761 = { version = "0.4", default-features = false }
-ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }
+criterion = "0.5"
+ark-bw6-761 = { version = "0.5", default-features = false }
+ark-bls12-381 = { version = "0.5", default-features = false, features = ["curve"] }
 
 [[bench]]
 name = "primitives"
