--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "w3f-pcs"
-version = "0.0.2"
+version = "0.0.3"
 edition = "2021"
 authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "Collection of tools for augmenting polynomial commitment schemes"
 keywords = ["cryptography", "pcs", "kzg"]
+repository = "https://github.com/w3f/fflonk"
 
 [dependencies]
 ark-std = { version = "0.5", default-features = false }
